# NixPill

./: README.md
ferris/: Cargo.toml  README.md  results.1.txt  shell.nix
ferris/src/: main.rs
py/: README.md  pyproject.toml  shell.nix
py/src/example_web/: app.py
py/tests/: test_rest.py  test_ws.py
sys/: shell.nix
