[project]
name = "example_web"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jesse", email = "dev@jesseconis.io"},
]
dependencies = [
    "uvicorn>=0.30.6",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
